<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ua.internship.yaltask01.MainActivity"
    android:focusableInTouchMode="true"
    android:background="@color/background">

    <include
        layout="@layout/app_bar"/>

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Divider">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_title"
                        android:id="@+id/title"
                        style="@style/MyStyle.Title"
                        android:layout_weight="1"
                         />

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_status"
                        android:id="@+id/status"
                        android:background="@drawable/rounded"
                        android:textColor="@color/colorWhite"
                        style="@style/MyStyle" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Divider">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_create"
                        android:id="@+id/text_create"
                        style="@style/MyStyle.Grey"
                        android:layout_weight="2" />

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/date_create"
                        android:id="@+id/date_create"
                        style="@style/MyStyle"
                        android:layout_weight="1"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Divider">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_reg"
                        android:id="@+id/text_reg"
                        style="@style/MyStyle.Grey"
                        android:layout_weight="2" />

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/date_reg"
                        android:id="@+id/date_reg"
                        style="@style/MyStyle"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Divider">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_ass"
                        android:id="@+id/text_ass"
                        style="@style/MyStyle.Grey"
                        android:layout_weight="2" />

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/date_ass"
                        android:id="@+id/date_ass"
                        style="@style/MyStyle"
                        android:layout_weight="1" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Divider">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        style="@style/MyStyle.Grey"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_responsible"
                        android:id="@+id/text_res"
                        android:layout_weight="1" />

                    <TextView
                        style="@style/MyStyle"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_responsible2"
                        android:id="@+id/text_res2"
                        android:layout_weight="1"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Divider">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_description"
                        android:id="@+id/description"
                        style="@style/MyStyle"
                        android:gravity="left" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:id="@+id/rv"
                    >

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
